完善手写方法

--- a/JavaScriptDeep/手写方法.md
+++ b/JavaScriptDeep/手写方法.md
@@ -247,3 +247,35 @@ function anyPromise(promises) {
 2. 将新对象的原型指向当前函数的原型
 3. 新创建的对象绑定到当前 this 上
 4. 如果没有返回其他对象，就返回 obj，否则返回其他对象
+
+
+
+## 数组去重
+
+```js
+Array.prototype.uniq = function () {
+  /* 1 */
+  return [...new Set(this)]
+  /* 2 */
+  const map = new Map()
+  let arr = []
+  for (let i = 0; i < this.length; i++) {
+    if (!map.has(this[i])) {
+      map.set(this[i], 1)
+      arr.push(this[i])
+    }
+  }
+  return arr
+  /* 3 */
+  this.sort((a, b) => a - b)
+  let j = 0
+  for (let i = 1; i < this.length; i++) {
+    if (this[i] !== this[j]) {
+      j += 1
+      this[j] = this[i]
+    }
+  }
+  return this.splice(0, j + 1)
+}
+```
+
