--- a/Vue/面试题.md
+++ b/Vue/面试题.md
@@ -9,12 +9,100 @@
 
 ## vue 优化
 
-- 如果列表是纯粹的数据展示，不会任何改变，就不需要做响应化：`Object.freeze`
-- 大数据长列表 vue-virtual-scroll 采用虚拟滚动，只渲染少部分区域的内容
-- 无状态的组件标记为函数式组件 `<template functional>`
-- 耗时任务，切分成单独的组件
+### v-if 和 v-show
 
+- v-if 是真正的条件渲染，因为它会确保在切换过程中条件块内的事件监听和子组件适当地被销毁和重建，也是**惰性的**；如果在初始化渲染时条件为假，则什么也不做，一直到条件第一次变为真时，才会开始渲染条件块
+- v-show 就简单得多，不管初始条件是什么，元素总会被渲染，并且只是简单地基于 CSS 的 display 属性进行切换
 
+所以，v-if 适用于在运行时很少改变条件，不需要频繁切换条件的场景，v-sho 则适用于非常频繁切换条件的场景
+
+### 多使用计算属性
+
+- computed 是计算属性，依赖其它属性值，并且 computed 的值有缓存，只有它依赖的属性值发生改变，下一次获取 computed 的值才会重新计算 computed 的值
+
+当我们需要进行数值计算，并且依赖于其它数据时
+
+1. 使用方式
+   - 方法需要调用，可以传参
+   - 计算属性不能调用，不可传参
+2. 缓存
+   - 方法没有缓存
+   - 计算属性默认会有缓存计算结果
+
+计算属性就是可以写逻辑的 data，还可以结合 v-model 使用，需要实现 getter 和 setter 方法
+
+### v-for 遍历同时使用 v-if
+
+vue2 v-for 优先级其实是比 v-if 高，所以两个指令出现在一个 DOM 中，那么 v-for 渲染的当前列表，每一次都需要进行 v-if 的判断。而相应的列表也会重新变化，这个看起来是非常不合理的。因此当你需要进行同步指令的时候，进行使用计算属性，先将 v-if 不需要的值先过滤掉
+
+```vue
+<template>
+  <ul>
+    <li v-for="item in filterList" :key="item.id">
+      {{ item.name }}
+    </li>
+  </ul>
+</template>
+<script>
+export default {
+  computed: {
+    filterList() {
+      return this.showData.filter(data => data.isShow)
+    }
+  }
+}
+</script>
+```
+
+### v-for key
+
+在列表数据进行遍历渲染时，需要为每一项 item 设置唯一值 key 值，方便 Vue.js 内部机制精准找到该列表数据。当 state 更新时，新的状态值和旧的状态值对比，较快地定位到 diff
+
+并且 v-for 并不推荐使用 index 下标作为 key 的值，这个是一个非常好理解的知识点。当 index 作为标识的时候，插入一条数据的时候，列表中它后面的 key 都发生了变化，那么 v-for都会对 key 变化的 Element 重新渲染，但是其实它们除了插入的 Element 数据都没有发生改变，这就导致了没有必要的开销。所以，尽量不要用 index 作为标识，而去采用数据中的唯一值，如 id 字段
+
+### 长列表性能优化
+
+Vue 会通过 Object.defineProperty 对数据进行劫持，来实现视图响应数据的变化，然而有时候我们封装的组件就是纯粹的数据展示，不会有任何改变，我们就不需要 Vue 来劫持我们的数据，在大量数据展示的情况下，这能够很明显减少组件初始化的时间，那如何禁止 Vue 劫持我们的数据呢？
+
+- 可以通过 Object.freeze 方法来冻结一个对象，一旦被冻结的对象就再也不能被修改了
+
+**优化无限列表性能**
+
+项目当中，会设计到非常多的长列表场景，区别于普通的分页来说，大部分想的多一点的就是做一个分页，滚动到底部的时候我们就继续请求 API。随着数据的加载，DOM 会越来越多，这样就导致了性能开销问题，当页面上 DOM 太多的时候，难免给我们的客户端造成一定的压力，所以对于长列表渲染的时候，建议将 DOM 移除掉，类似于图片懒加载的模式，只有出现在视图上的 DOM 才是重要的 DOM。网络上有一些好的解决方案，比如：vue-virtual-scroller、ve-virtual-scroll-list
+
+### 图片资源优化
+
+在网页中，往往存在大量的图片资源，这些资源或大或小。当我们页面中的 DOM 中存在大量的图片时，难免不会碰到一些家长缓慢的问题，甚至加载失败的问题
+
+- 小图标使用 svg 或者字体图标，或者制作雪碧图
+- 通过 base64 和 webp 的方式加载小型图片
+- 能通过 cdn 加速的大图尽量使用 cdn
+- 对图片资源进行懒加载
+- 压缩图片大小
+  - 如果是纯静态图片，建议使用统一的工具进行压缩 tinypng
+  - 注意：不建议用 webpack 构建压缩图片，会严重影响打包时间
+  - 如果是动态图片，比如用户创建的文章中的图片，建议由后端来压缩
+
+### 路由懒加载
+
+vue 是单页面应用，可能会有很多的路由引入，这样使用 webpack 打包后的文件很大，当进入首页时，加载的资源过多，页面会出现白屏的情况，不利于用户体验，如果我们能把不同路由对应的组件分割成不同的代码块，然后当路由被访问时候才加载对应的组件，这样就更高效了。这样会大大提高首屏显示的速度，但是可能其他的页面的速度就会降下来
+
+- 注意：懒加载的路由太多的话会导致打包性能下降。路由懒加载就是异步组件，异步组件不宜太多，否则会有打包性能问题
+
+```js
+// require 语法
+component: resolve => (require(['@/components/HelloWorld'], resolve))
+
+// import 语法
+component: () => import('@/components/HelloWorld')
+```
+
+### 首屏渲染优化
+
+- 预渲染，没什么动态数据的页面直接预渲染成静态页面
+- 路由懒加载
+- 在首页加入 loading 动画，骨架屏
+- 权限方案：服务端渲染，如果仅仅是因为首屏渲染慢，其实也不建议引入服务端渲染方案，因为成本还是比较高的，除非你要解决 SEO，这时你就不得不上服务端渲染了
 
 ## 组件化理解
 
