--- a/Engineering/面试题.md
+++ b/Engineering/面试题.md
@@ -305,3 +305,94 @@ close
 
 - 该阶段执行关闭请求的回调函数，比如 socket.on('close', ...)
 
+
+
+## 一万条数据如何渲染
+
+1. 使用 for 循环直接渲染出来
+
+   很卡顿
+
+2. 虚拟列表
+
+   [一个简洁、有趣的无限下拉方案](https://juejin.cn/post/6844904009568878600)
+
+   事件监听 scroll，需要知道两个高度：窗口显示区的高度（window.innerHeight）、图片到视窗上边的距离（getBoundingClientRect().top）
+
+   ```js
+   const images = document.querySelectorAll('img')
+   window.addEventListener('scroll', e => {
+     images.forEach(image => {
+       const imageTop = image.getBoundingClientRect().top
+       if (imageTop < window.innerHeight) {
+         const data_src = image.getAttribute('data-src')
+         image.setAttribute('scr', data_src)
+       }
+     })
+   })
+   ```
+
+   IntersectionObserver 观察目标与视口是否有交叉
+
+   ```js
+   const images = document.querySelectorAll('img')
+   const callback = entries => {
+     entries.forEach(entry => {
+       if (entry.isIntersecting) {
+         const image = entry.target
+         const data_src = image.getAttribute('data-src')
+         image.setAttribute('scr', data_src)
+         observer.unobserve(image)
+       }
+     })
+   }
+   const observer = new IntersectionObserver(callback)
+   images.forEach(image => {
+     observer.observe(image)
+   })
+   ```
+
+   - 监听一个固定长度列表的首尾元素是否进入视窗
+   - 更新当前页面内渲染的第一个元素对应的序号
+   - 根据上述序号，获取目标数据元素，列表内容重新渲染成对应内容
+   - 容器 padding 调整，模拟滚动实现
+
+3. 时间分片
+
+   使用 createDocumentFragment 和 requestAnimationFrame
+
+   fragment 是一个指向空 DocumentFragment 对象的引用，DocumentFragments 是 DOM 节点。它们不是主 DOM 树的一部分
+
+   window.requestAnimationFrame() 告诉浏览器——你希望执行一个动画，并且要求浏览器在下次重绘之前调用指定的回调函数更新动画
+
+   ```html
+   <ul class="content"></ul>
+   <script>
+     // 总数据
+     const total = 10000
+     // 每次处理数据
+     const each = 20
+     // 需要处理次数
+     const needTimes = Math.ceil(total / each)
+     // 父容器
+     const content = document.querySelector('.content')
+     // 当前处理次数
+     let currentTime = 0
+     // 处理元素插入
+     function add() {
+       const fragment = document.createDocumentFragment()
+       for (let i = 0; i < each; i++) {
+         const li = document.createElement('li')
+         li.innerText = Math.floor(i + currentTime * each)
+         fragment.appendChild(li)
+       }
+       content.appendChild(fragment)
+       currentTime++
+       if (currentTime < needTimes) {
+         window.requestAnimationFrame(add)
+       }
+     }
+     window.requestAnimationFrame(add)
+   </script>
+   ```
+
