--- a/HTTP/面试题.md
+++ b/HTTP/面试题.md
@@ -148,26 +148,37 @@ UDP
 
 ## local、session
 
-区别：
+> [关于Cookie、session和Web Storage](https://juejin.cn/post/6844903592349040654?share_token=b8423ad8-fb0c-47a1-af27-9ede07e96195)
 
-- 生命周期
+cookie 和 session 的区别：
 
-  localStorage 生命周期是永久
+- **cookie** 数据存放在客户的 **浏览器** 上，**session** 数据存放在 **服务器** 上
+- cookie 不是很安全，别人可以分析存放在本地的 cookie 并进行 cookie 欺骗，**考虑到安全应当使用 session**。用户验证这种场合一般会用 session
+- **session 保存在服务器，客户端不知道其中的信息**；反之，cookie 保存在客户端，服务器能够知道其中的信息
+- **session 会在一定时间内保存在服务器上，当访问增多，会比较占用服务器的性能，考虑减轻服务器性能方面，应当使用 cookie**
+- **session 中保存的是对象**，cookie 保存的是字符串
+- **session 不能区分路径**，同一个用户在访问一个网站期间，所有的 session 在任何一个地方都可以访问到，而 cookie 中如果设置了路径参数，那么同一个网站中不同路径下的 cookie 互相是访问不到的
 
-  sessionStorage 生命周期为当前窗口或标签页
+![image-20230316172503583](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230316172503583.png)
 
-- 作用域
+**localStorage、sessionStorage、cookie 的区别**
 
-  不同浏览器无法共享 localStorage 或 sessionStorage 中的信息
+共同点：都是保存在浏览器端，且同源的
 
-  相同浏览器的不同页面间可以共享相同的 localStorage（页面属于相同域名和端口），但是不同页面或标签页间无法共享 sessionStorage 的信息
-
-  如果一个标签页包含多个 iframe 标签且他们属于同源页面，那么他们之间是可以共享 sessionStorage 的
-
-cookie
-
-- 一般的同源策略：需要满足：协议、域名、端口
-  cookie 的 "同源策略"：**仅仅关注域名**
+- 数据存储方面
+  - cookie 数据始终在同源的 http 请求中携带，即 cookie 在浏览器和服务器之间来回传递，cookie 数据还有路径概念，可以限制 cookie 只属于某个路径下
+  - sessionStorage 和 localStorage 不会自动把数据发送给服务器，仅在本地保存
+- 存储数据大小
+  - cookie 数据不能超过 4k，同时因为每次 http 请求都会携带 cookie，所以 cookie 只适合保存很小的数据，如会话标识
+  - sessionStorage 和 localStorage 虽然也有存储大小的限制，但是比 cookie 大的多，可以达到 5M 或更大
+- 数据存储有效期
+  - sessionStorage 仅在当前浏览器窗口关闭之前有效
+  - localStorage 始终有效，窗口或浏览器关闭也一直保存，本地存储，因此用作持久数据
+  - cookie 只在设置的 cookie 过期时间之前有效，即使窗口关闭或者浏览器关闭
+- 作用域不同
+  - sessionStorage 不在不同的浏览器窗口中共享，即使是同一个页面
+  - localStorage 在所有同源窗口中都是共享的，也就是只要浏览器不关闭，数据仍然存在
+  - cookie 也是在所有同源窗口中都是共享的，也就是说只要浏览器不关闭，数据仍然存在
 
 跨域
 
