--- a/HTTP/面试题.md
+++ b/HTTP/面试题.md
@@ -243,6 +243,25 @@ cookie 和 session 的区别：
 
 - Proxy 反向代理
 
+## 强缓存与协商缓存
+
+HTTP 缓存分为以下两种，两者都是通过 HTTP 响应头控制缓存
+
+1. 强缓存
+
+   通过响应头 `Cache-Control` 中 max-age 指令进行控制，max-age 可设置强缓存时间周期，在该周期内将直接从客户端缓存获取资源，而不会向服务器发送请求
+
+2. 协商缓存
+
+   通过响应头 `ETag` 与 `Last-Modified` 进行控制，它每次发送请求时，需要进行缓存新鲜度校验，如果资源过久，将从响应中获取，否则从客户端缓存中获取
+
+   新鲜度校验通过请求头 `If-None-Match` 与响应头 `ETag` 进行比较，或请求头 `If-Modified-Since` 与响应头 `Last-Modified` 进行对比
+
+一般来说，我们对经构建工具打包后，带有 hash 的资源进行一年的强缓存，而对不带 hash 的资源进行协商缓存控制
+
+- 需要设置 `Cache-Control: max-age=0/no-cache`
+- 否则会根据 Date 与 `Last-Modified` 计算出强缓存时间
+
 ## CSRF
 
 > [https://github.com/funnycoderstar/blog/issues/142](https://github.com/funnycoderstar/blog/issues/142)
