--- a/Vue/面试题.md
+++ b/Vue/面试题.md
@@ -9,6 +9,20 @@
 
 ## vue 优化
 
+### diff 算法
+
+vue2 才用了 **双端 diff 算法**，核心方法是 **updateChildren**，通过 **新前与旧前、新后与旧后、新后与旧前、新前与旧后、暴力对比** 5 种查找
+
+- 新前与旧前对比，如果相同，老开始下标往后移动一格。如果不相同会进入新后与旧后对比
+- 新后与旧后对比，如果相同，新、老结束下标往前移动一格。如果不相同会进入新后与旧后对比
+- 新后与旧前对比，如果相同，老开始节点移动到老结束节点后面，老开始下标往后移动一格，新的结束下标往前移动一格。如果不相同会进入新前与旧后对比
+- 新前与旧后对比，如果相同，老结束节点移动到老开始节点前面，新开始下标往后移动一格，老结束下标往前移动一格。如果不相同会进入暴力比对（乱序）
+- 暴力比对，首先我们需要循环 oldChildren 生成一个 key 和 index 的映射表 `{ 'a': 0, 'b': 1 }`，然后我们用新的开始节点的 key 去映射表中查找，如果找到就把该节点移动到最前面，原来的位置用 undefined 占位，避免数组塌陷，防止老节点移动走了之后破坏了初始映射表位置，如果没有找到直接把新节点插入
+  - 如果新节点有剩余，newChildren 还有剩余的节点还没有处理，我们需要循环这些节点，逐个插入
+  - 如果老节点有剩余，oldChildren 还有剩余的节点还没有处理，我们需循环这些节点，逐个删除
+
+vue2 虚拟 dom 是进行全量的对比，在运行时会对所有节点生成一个虚拟节点树，当页面数据发生变化时，会遍历判断虚拟 DOM 所有节点有没有发生变化。vue3 在 diff 算法中相比 vue2 增加了静态标记，在模板编译时，编译器会在动态标签上加上 patchFlag
+
 ### v-if 和 v-show
 
 - v-if 是真正的条件渲染，因为它会确保在切换过程中条件块内的事件监听和子组件适当地被销毁和重建，也是**惰性的**；如果在初始化渲染时条件为假，则什么也不做，一直到条件第一次变为真时，才会开始渲染条件块
