--- a/Node/1.Node基础.md
+++ b/Node/1.Node基础.md
@@ -174,3 +174,75 @@ module.exports = async (repo, desc) => {
 }
 ```
 
+约定路由功能
+
+- loader 文件
+- 代码模板渲染 hbs Mustache 风格模板
+
+```js
+import fs from 'fs'
+import handlebars from 'handlebars'
+import chalk from 'chalk'
+
+export default async () => {
+  // 获取页面列表
+  const list = fs
+    .readdirSync('./src/views')
+    .filter(v => v !== 'Home.vue')
+    .map(v => ({
+      name: v.replace('.vue', '').toLowerCase(),
+      file: v
+    }))
+
+  console.log('list', list)
+
+  // 生成路由定义
+  compile(
+    {
+      list
+    },
+    './src/router.js',
+    './template/router.js.hbs'
+  )
+
+  // 生成菜单
+  compile(
+    {
+      list
+    },
+    './src/App.vue',
+    './template/App.vue.hbs'
+  )
+
+  /**
+   * 编译模板文件
+   * @param meta 数据定义
+   * @param filePath 目标文件路径
+   * @param templatePath 模板文件路径
+   */
+  function compile(meta, filePath, templatePath) {
+    if (fs.existsSync(templatePath)) {
+      const content = fs.readFileSync(templatePath).toString()
+      const result = handlebars.compile(content)(meta)
+      fs.writeFileSync(filePath, result)
+    }
+    console.log(chalk.green(`🚀${filePath} 创建成功`))
+  }
+}
+```
+
+发布 npm
+
+```bash
+#!/usr/bin/env bash
+npm config get registry # 检查仓库镜像库
+npm config set registry=http://registry.npmjs.org
+echo '请进行登录相关操作：'
+npm login # 登陆
+echo "-------publishing-------"
+npm publish # 发布
+npm config set registry=https://registry.npm.taobao.org # 设置为淘宝镜像
+echo "发布完成"
+exit
+```
+
