--- a/Vue/面试题.md
+++ b/Vue/面试题.md
@@ -280,3 +280,44 @@ LRU 缓存策略
 1. nextTick 接收一个回调函数时，传入的回调函数会在 callbacks 中存起来，根据一个标记状态 pending 来判断当前是否要执行 timerFunc()
 2. timerFunc() 是根据当前环境判断使用哪种方式实现，按照 Promise.then 和 MutationObserver 以及 setImmediate 的优先级来判断，支持哪个就用哪个，如果执行环境不支持，会采用 setTimeout(fn, 0) 代替
 3. timerFunc() 函数中会执行 flushCalbacks 函数，flushCallbacks 函数作用就是对所有 callback 进行遍历，然后指向相应的回调函数
+
+
+
+## scoped 原理
+
+当 style 标签有 scoped 属性时，它通过 postcss 对其进行如下转换
+
+```html
+<style scoped>
+.example {
+  color: red;
+}
+</style>
+<template>
+  <div class="example">hi</div>
+</template>
+
+<style>
+.example[data-v-f3f3eg9] {
+  color: red;
+}
+</style>
+<template>
+  <div class="example" data-v-f3f3eg9>hi</div>
+</template>
+```
+
+1. 为组件实例生成一个唯一标识，给组件的每个标签对应的 DOM 元素添加一个标签属性，data-xxx
+
+2. 给 style scoped 中的每个选择器的最后一个选择器添加一个属性选择器，原选择器 `[data-v-xxx]`，如：原选择器为 `.container #id div`，则更改后选择器为 `.container #id div[data-v-xxx]`
+
+3. 对于同一个选择器，父子组件加 scoped　标签，样式互不影响
+
+4. 对于同一个选择器，父子组件不加 scoped　标签，父组件优先级会高于子组件
+
+   因为 vue 会先对子组件进行加载，子组件都加载完，父组件才会加载完，CSS 是层叠样式，父组件加载的样式在后面
+
+样式穿透：>>>、/deep/、::v-deep
+
+- scoped 后选择器最后默认会加上当前组件的一个标识，比如：`[data-v-xxx]`
+- 用了样式穿透后，在 deep 之后的选择器就不会加上标识
