--- a/Vue/面试题.md
+++ b/Vue/面试题.md
@@ -273,6 +273,35 @@ LRU 缓存策略
 2. 每当缓存命中（被访问），则将数据移到链表头部
 3. 链表满时，将链表尾部的数据丢弃
 
+```js
+class LRUCache {
+  constructor(capacity) {
+    this.capacity = capacity;
+    this.map = new Map();
+  }
+
+  get(key) {
+    const value = this.map.get(key);
+    if (value === undefined) {
+      return -1;
+    }
+    this.map.delete(key);
+    this.map.set(key, value);
+    return value;
+  }
+
+  put(key, value) {
+    if (this.map.has(key)) {
+      this.map.delete(key);
+    } else if (this.map.size >= this.capacity) {
+      const oldestKey = this.map.keys().next().value;
+      this.map.delete(oldestKey);
+    }
+    this.map.set(key, value);
+  }
+}
+```
+
 
 
 ## nextTick 原理
