更新图片链接

--- a/Vue/面试题.md
+++ b/Vue/面试题.md
@@ -142,6 +142,8 @@ component: () => import('@/components/HelloWorld')
 - 比如做 reactive 的 state，React useState 把值和更新的方法做了区分，值是一个字面量，每一次执行 Hook 都会得到一个新的值。Vue 把 get 和 set 合到一起，形成一个 ref
 - Vue 的 setup 函数只执行一次，根据数据变化执行 computed 或 watch。React Hooks 底层基于链表实现，每次组件被 render 会按顺序执行所有的 hooks
 
+![image-20230426180407661](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230426180407661.png)
+
 ### 虚拟 DOM 区别
 
 - vue3.0 通过 Proxy 响应式 + 组件内部 dom + 静态标记，把任务颗粒度控制的足够细致
