--- a/Project/1-3模块联微前端.md
+++ b/Project/1-3模块联微前端.md
@@ -1,6 +1,4 @@
-## 模块联邦微前端
-
-### 概述
+## 概述
 
 当前案例中包含三个微应用，分别为 Marketing、Authentication 和 Dashboard
 
@@ -9,3 +7,569 @@
 3. Dashboard：仪表盘微应用，包含仪表盘组件
 
 ![image-20230412153847762](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230412153847762.png)
+
+容器应用、营销应用、身份验证应用使用 React 框架，仪表盘应用使用 Vue 框架
+
+![image-20230424095727227](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230424095727227.png)
+
+## Marketing
+
+### 应用初始化
+
+创建应用结构
+
+```bash
+├── public
+│   └── index.html
+├── src
+│   ├── bootstrap.js
+│   └── index.js
+├── package-lock.json
+├── package.json
+└── webpack.config.js
+```
+
+配置 webpack
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin')
+
+module.exports = {
+  mode: 'development',
+  output: {
+    publicPath: 'http://localhost:8081/'
+  },
+  devServer: {
+    port: 8081,
+    // 当使用 HTML5 History API 时，所有的 404 请求都会响应 index.html 文件
+    historyApiFallback: true
+  },
+  module: {
+    rules: [
+      {
+        test: /\.js$/,
+        exclude: /node_modules/,
+        use: {
+          loader: 'babel-loader',
+          options: {
+            presets: ['@babel/preset-react', '@babel/preset-env'],
+            // 1.避免 babel 转移语法后 helper 函数重复
+            // 2.避免 babel polyfill 将 API 添加到全局
+            plugins: ['@babel/plugin-transform-runtime']
+          }
+        }
+      }
+    ]
+  },
+  plugins: [
+    new HtmlWebpackPlugin({
+      template: './public/index.html'
+    })
+  ]
+}
+```
+
+添加启动命令
+
+```json
+{
+  "scripts": {
+    "start": "webpack serve"
+  }
+}
+```
+
+### 创建挂载方法
+
+```js
+import React from 'react'
+import ReactDOM from 'react-dom'
+
+function mount(el) {
+  ReactDOM.render(<div>Marketing works</div>, el)
+}
+
+if (process.env.NODE_ENV === 'development') {
+  const el = document.querySelector('#dev-marketing')
+  if (el) mount(el)
+}
+
+export { mount }
+```
+
+### 创建路由
+
+1. 在 src 文件中创建 components 文件夹用于放置页面组件
+2. 在 src 文件夹中创建 App 组件，用于编写路由
+
+```js
+import React from 'react'
+import { Router, Route, Switch } from 'react-router-dom'
+import Landing from './components/Landing'
+import Pricing from './components/Pricing'
+
+export default function App() {
+  return (
+    <Router>
+      <Switch>
+        <Route path='/pricing'>
+          <Pricing />
+        </Route>
+        <Route path='/'>
+          <Landing />
+        </Route>
+      </Switch>
+    </Router>
+  )
+}
+```
+
+```js
+// bootstrap.js
+import App from './App'
+function mount(el) {
+  ReactDOM.render(<App />, el)
+}
+```
+
+## Container
+
+### 应用初始化
+
+1. 创建应用结构 (基于 Marketing 应用进行拷贝修改)
+
+2. 修改 index.html
+
+   ```html
+   <div id="root"></div>
+   ```
+
+3. 修改 App.js
+
+   ```js
+   import React from 'react'
+   export default function App() {
+     return <div>Container works</div>
+   }
+   ```
+
+4. 修改 bootstrap.js
+
+   ```js
+   if (process.env.NODE_ENV === 'development') {
+     const el = document.querySelector('#root')
+     if (el) mount(el)
+   }
+   ```
+
+5. 修改 webpack.config.js
+
+   ```js
+   module.exports = {
+     devServer: {
+       port: 8080
+     }
+   }
+   ```
+
+### 加载 Marketing
+
+`ModuleFederationPlugin` 具有以下属性：
+
+- name：当前应用的名称，用于标识自己的模块
+- filename：当前应用程序生成的远程模块代码文件名
+- exposes：指定要暴露给其他应用程序使用的本地模块，可以是单个模块或一个对象
+- remotes：指定从哪些其他应用程序中获取远程模块和如何加载它们
+- shared：共享模块列表，这些模块将在不同的应用程序之间共享，以避免统一模块多次加载
+
+1. Marketing 应用配置 ModuleFederation
+
+   `marketing\webpack.config.js`
+
+   ```js
+   const ModuleFederationPlugin = require('webpack/lib/container/ModuleFederationPlugin')
+   
+   new ModuleFederationPlugin({
+     name: 'marketing',
+     filename: 'remoteEntry.js',
+     exposes: {
+       './MarketingApp': './src/bootstrap.js'
+     }
+   })
+   ```
+
+2. Container 应用配置
+
+   `container\webpack.config.js`
+
+   ```js
+   const ModuleFederationPlugin = require('webpack/lib/container/ModuleFederationPlugin')
+   
+   new ModuleFederationPlugin({
+     name: 'container',
+     remotes: {
+       marketing: 'marketing@http://localhost:8081/remoteEntry.js'
+     }
+   })
+   ```
+
+3. 在 Container 应用中新建 MarketingApp 组件，用于挂载 Marketing 应用
+
+   `container\src\components\MarketingApp.js`
+
+   ```js
+   import React, { useEffect, useRef } from "react"
+   import { mount } from "marketing/MarketingApp"
+   
+   export default function MarketingApp() {
+     const ref = useRef()
+     useEffect(() => {
+       mount(ref.current)
+     }, [])
+     return <div ref={ref}></div>
+   }
+   ```
+
+4. 在 Container 应用中的 App 组件中渲染 Marketing 应用
+
+   `container\src\App.js`
+
+   ```js
+   import React from 'react'
+   import MarketingApp from './components/MarketingApp'
+   
+   export default function App() {
+     return <MarketingApp />
+   }
+   ```
+
+### 共享库设置
+
+在 Container 应用和 Marketing 应用中都使用了大量的相同的代码库，如果不做共享处理，则应用中相同的共享库会被加载两次
+
+![image-20230424162815929](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230424162815929.png)
+
+`container\webpack.config.js`、`marketing\webpack.config.js`
+
+```js
+const ModuleFederationPlugin = require('webpack/lib/container/ModuleFederationPlugin')
+const packageJSON = require('./package.json')
+
+new ModuleFederationPlugin({
+  shared: packageJSON.dependencies
+})
+```
+
+## Marketing 路由
+
+### 路由配置
+
+容器应用路由用于匹配微应用，微应用路由用于匹配组件
+
+![image-20230425100402456](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230425100402456.png)
+
+容器应用使用 BrowserHistory 路由，微应用使用 MemoryHistory 路由
+
+1. 为防止容器应用和微应用同时操作 url 而产生冲突，在微前端架构中，只允许容器应用更新 url，微应用不允许更新 url，MemoryHistory 是基于内存的路由，不会改变浏览器地址栏中的 url
+2. 如果不同的应用程序需要传达有关路由的相关信息，应该尽可能的使用通过的方式，MemoryHistory 在 React 和 Vue 中都有提供
+
+### 更新现有路由配置
+
+1. 容器应用的路由配置
+
+   `container\src\App.js`
+
+   ```js
+   import { Router, Route, Switch } from 'react-router-dom'
+   import Landing from './components/Landing'
+   import Pricing from './components/Pricing'
+   
+   export default function App({ history }) {
+     return (
+       <Router history={history}>
+         <Switch>
+           <Route path='/pricing'>
+             <Pricing />
+           </Route>
+           <Route path='/'>
+             <Landing />
+           </Route>
+         </Switch>
+       </Router>
+     )
+   }
+   ```
+
+2. Marketing 应用的路由配置
+
+   `marketing\src\bootstrap.js`
+
+   ```js
+   import { createMemoryHistory } from 'history'
+   
+   function mount(el) {
+     const history = createMemoryHistory()
+     ReactDOM.render(<App history={history} />, el)
+   }
+   ```
+
+3. 添加头部组件
+
+   `container\src\components\Header.js`
+
+   ```js
+   import Header from './components/Header'
+   export default function App() {
+     return <Header />
+   }
+   ```
+
+### 微应用和容器应用路由沟通
+
+1. 微应用路由变化时 url 地址没有被同步到浏览器地址栏中，路由变化也没有被同步到浏览器的历史记录中
+
+   当微应用路由发生变化时通知容器应用更新路由信息（容器应用向微应用传递方法）
+
+   `container\src\components\MarketingApp.js`
+
+   ```js
+   import { useHistory } from 'react-router-dom'
+   
+   export default function MarketingApp() {
+     const ref = useRef()
+     const history = useHistory()
+     useEffect(() => {
+       mount(ref.current, {
+         onNavigate({ pathname: nextPathname }) {
+           const pathname = history.location.pathname
+           if (nextPathname !== pathname) {
+             history.push(nextPathname)
+           }
+         }
+       })
+     }, [])
+   }
+   ```
+
+   `marketing\src\bootstrap.js`
+
+   ```js
+   function mount(el, { onNavigate }) {
+     if (onNavigate) history.listen(onNavigate)
+   }
+   ```
+
+2. 容器应用路由发生变化时只能匹配到微应用，微应用路由并不会响应容器应用路由的变化
+
+   当容器应用路由发生变化时需要通知微应用路由进行响应（微应用向容器应用传递方法）
+
+   `marketing\src\bootstrap.js`
+
+   ```js
+   function mount(el, { onNavigate }) {
+     return {
+       onParentNavigate({ pathname: nextPathname }) {
+         const pathname = history.location.pathname
+         if (nextPathname !== pathname) {
+           history.push(nextPathname)
+         }
+       }
+     }
+   }
+   ```
+
+   `container\src\components\MarketingApp.js`
+
+   ```js
+   export default function MarketingApp() {
+     useEffect(() => {
+       const { onParentNavigate } = mount(})
+       if (onParentNavigate) history.listen(onParentNavigate)
+     }, [])
+   }
+   ```
+
+### 应用本地路由设置
+
+如果当前为本地开发环境，路由依然使用 BrowswerHistory，所以在调用 mount 方法时传递 defaultHistory 以做区分
+
+`marketing\src\bootstrap.js`
+
+```js
+import { createBrowserHistory } from 'history'
+
+if (process.env.NODE_ENV === 'development') {
+  const el = document.querySelector('#dev-marketing')
+  if (el) mount(el, { defaultHistory: createBrowserHistory() })
+}
+```
+
+在 mount 方法内部判断 defaultHistory 是否存在，如果存在就用 defaultHistory，否则就用 MemoryHistory
+
+```js
+function mount(el, { onNavigate, defaultHistory }) {
+  const history = defaultHistory||  createMemoryHistory()
+}
+```
+
+## Auth
+
+### 初始化
+
+1. 下载应用依赖 `cd auth && npm install`
+
+2. 拷贝 src 文件夹并做如下修改
+
+   ```js
+   if (process.env.NODE_ENV === 'development') {
+     const el = document.querySelector('#dev-auth')
+   }
+   ```
+
+3. 拷贝 public 文件夹，并修改 index.html
+
+   ```html
+   <div id="dev-auth"></div>
+   ```
+
+4. 拷贝 webpack.config.js 文件并进行修改
+
+   修改更正文件的访问路径：publicPath
+
+   ```js
+   module.exports = {
+     output: {
+       publicPath: 'http://localhost:8082/'
+     },
+     devServer: {
+       port: 8082
+     },
+     plugins: [
+       new ModuleFederationPlugin({
+         name: 'auth',
+         exposes: {
+           './AuthApp': './src/bootstrap.js'
+         }
+       })
+     ]
+   }
+   ```
+
+5. 添加应用启动命令
+
+   ```json
+   {
+     "scripts": {
+       "start": "webpack serve"
+     }
+   }
+   ```
+
+### 加载 AuthApp
+
+1. 在 Container 应用的 webpack 中配置添加 AuthApp 的远端地址
+
+   ```js
+   new ModuleFederationPlugin({
+     remotes: {
+       auth: 'auth@http://localhost:8082/remoteEntry.js'
+     }
+   })
+   ```
+
+2. 在 Container 应用的 componets 文件夹中新建 AuthApp.js，并拷贝 MarketingApp.js 中的内容进行修改
+
+   ```js
+   import { mount } from 'auth/AuthApp'
+   export default function AuthApp() {}
+   ```
+
+3. 在 Container 应用的 App.js 文件中配置路由
+
+   ```html
+   <Switch>
+     <Route path='/auth/signin'>
+       <AuthApp />
+     </Route>
+     <Route path='/'>
+       <MarketingApp />
+     </Route>
+   </Switch>
+   ```
+
+4. 解决登陆页面点击两次才显示的 Bug
+
+   当点击登陆按钮时，容器应用的路由地址是 /auth/signin，加载 AuthApp，但是 AuthApp 在首次加载时默认访问的是 /，因为在使用 createMemoryHistory 创建路由时没有传递初始参数，当再次点击登陆按钮时，容器应用通知微应用发生了变化，微应用同步路由变化，所以最终看到了登陆页面
+
+   解决问题的核心点在于微应用在初始化创建路由对象时应该接收一个默认参数，默认参数就来自于容器应用
+
+   `auth\src\bootstrap.js`
+
+   ```js
+   function mount(el, { onNavigate, defaultHistory, initialPath }) {
+     const history =
+       defaultHistory ||
+       createMemoryHistory({
+         initialEntries: [initialPath]
+       })
+   }
+   ```
+
+   `container\src\components\AuthApp.js`
+
+   ```js
+   mount(ref.current, { initialPath: history.location.pathname }
+   ```
+
+### 懒加载微应用
+
+```js
+import { lazy, Suspense } from 'react'
+import Progress from './components/Progress'
+
+const MarketingApp = lazy(() => import('./components/MarketingApp'))
+const AuthApp = lazy(() => import('./components/AuthApp'))
+
+function App() {
+  return (
+    <Suspense fallback={<Progress />}>
+      <Switch>
+        <Route path='/auth/signin'>
+          <AuthApp />
+        </Route>
+        <Route path='/'>
+          <MarketingApp />
+        </Route>
+      </Switch>
+    </Suspense>
+  )
+}
+```
+
+## 登陆
+
+### 设置登陆状态
+
+由于每个微应用都有可能用到登陆状态以及设置登陆状态的方法，所以登陆状态和设置登陆状态的方法需要放置在容器应用中
+
+`container\src\App.js`
+
+```js
+import { useState } from 'react'
+
+function App() {
+  const [status, setStatus] = useState(false)
+  return <AuthApp setStatus={setStatus} />
+}
+```
+
+`container\src\components\AuthApp.js`
+
+```js
+export default function AuthApp({ setStatus }) {
+  useEffect(() => {
+    mount(ref.current, { setStatus })
+  }, [])
+}
+```
+
