--- a/Project/1-3模块联微前端.md
+++ b/Project/1-3模块联微前端.md
@@ -523,6 +523,8 @@ function mount(el, { onNavigate, defaultHistory }) {
 
 ### 懒加载微应用
 
+`container\src\App.js`
+
 ```js
 import { lazy, Suspense } from 'react'
 import Progress from './components/Progress'
@@ -570,6 +572,57 @@ export default function AuthApp({ setStatus }) {
   useEffect(() => {
     mount(ref.current, { setStatus })
   }, [])
+}
+```
+
+`auth\src\bootstrap.js`
+
+```js
+function mount(el, { setStatus }) {
+  ReactDOM.render(<App setStatus={setStatus} />, el)
+}
+```
+
+`auth\src\App.js`
+
+```js
+export function App({ history, setStatus }) {
+  return <Signin setStatus={setStatus} />
+}
+```
+
+`auth\src\components\Signin.js`
+
+```js
+export default function SignIn({ setStatus }) {
+  return <Button onClick={() => setStatus(true)}>登录</Button>
+}
+```
+
+### 登陆状态应用
+
+根据登陆状态更改头部组件右侧按钮的文字，如果是**未登录状态，显示登陆**，如果是**登陆状态，显示退出**
+
+```js
+export default function App() {
+  const [status, setStatus] = useState(false)
+  useEffect(() => {
+    if (status) history.push('/dashboard')
+  }, [status])
+  return (
+    <Router history={history}>
+      <Header status={status} setStatus={setStatus} />
+    </Router>
+  )
+}
+```
+
+```js
+export default function Header({ status, setStatus }) {
+  const onClick = () => {
+    if (status && setStatus) setStatus(false)
+  }
+  return <Button to={status ? "/" : "/auth/signin"} onClick={onClick}>{status ? "退出" : "登录"}</Button>
 }
 ```
 
