--- a/Vue/面试题.md
+++ b/Vue/面试题.md
@@ -1,9 +1,46 @@
-## diff 算法理解
+## Vu2 与 Vue3 对比
 
-- diff 算法是虚拟 dom 技术的必然产物：通过新旧虚拟 dom 做对比（diff），将变化的地方更新在真实 DOM 上；另外，也需要 diff 高效的执行对比过程，从而降低时间复杂度为 O(n)
-- vue2.x 中为了降低 watcher 粒度，每个组件只有一个 watcher 与之对应，只有引入 diff 才能精确找到发生变化的地方
-- vue 中 diff 执行的时刻是组件实例执行其更新函数时，它会上一次渲染结果 oldVnode 和新的渲染结果 newVnode，此过程称为 patch
-- diff 过程遵循深度优先、同层比较的策略；两个节点之间比较会根据它们是否拥有子节点或者文本节点做不同操作；比较两组子节点是算法的重点，首先假设头尾节点可能相同做 4 次对比尝试，如果没有找到相同节点才按照通用方式遍历查找，查找结束再按情况处理剩下的节点，借助 key 通常可以非常精确找到相同节点，因此整个 patch 过程非常高效
+vue 是通过 vnode 去生成 dom 树，如果数据去更新，vnode 之间的对比有了解过吗
+
+**diff 算法**
+
+- 传统 diff 算法是通过循环递归节点进行依次对比，目的是追求完全对比和最小修改，算法复杂度达到 O(N^3)
+
+  Vue 放弃了完全对比及最小修改，才实现 O(N^3 -> N)
+
+- vue2 diff 算法采用了 **双端比较算法**：头尾相互比较，一共有4种比较方式，如果4种都没匹配，如果设置了 key，就用 key 比较
+
+
+**vnode**
+
+- vue2 虚拟 dom 是全量对比，当页面数据发生变化，会遍历判断虚拟 DOM 所有节点有没有发生变化
+
+  vue3 中，在模板编译会在动态标签末尾加上 patchFlag，在这个基础上进行 diff 算法
+
+  对于不参与更新的元素，做静态标记并提升 hoistStatic，只有在初始化的时候被创建一次，再次调用 render 无需创建直接复用
+
+**响应式原理**
+
+- Object.defineProperty
+- Proxy
+
+**CompositionAPI**
+
+- ref 返回响应式 Ref 对象，reactive 返回响应式代理对象
+
+  ref 返回响应式数据在 JS 的使用上需要加上 .value 才能访问其值，在视图中使用会自动脱 ref，不需要 .value
+
+  ref 内部依然是使用 reactive 实现响应式
+
+  reactive 内部如果接收 Ref 对象会自动脱 ref
+
+  使用展开运算符展开 reactive 响应式对象会使其失去响应式
+
+  reactive 使用 Proxy 代理传入对象并拦截各种操作，实现响应式。ref 内部封装了一个 RefImpl 类，并设置了 getter setter，拦截用户对值的访问，从而实现响应式
+
+- watchEffect 立即运行一个函数，然后被动地追踪它的依赖。watch 侦测一个或多个响应式数据源并在数据源发生变化时调用一个回调函数
+
+  watchEffect 在使用时，传入的函数会立刻执行一次。watch 默认情况下并不会执行回调函数，除非我们手动设置 immediate 选项
 
 
 
@@ -128,7 +165,18 @@ component: () => import('@/components/HelloWorld')
 
 
 
-## 组件化理解
+## Vue 理解
+
+### diff 理解
+
+- diff 算法是虚拟 dom 技术的必然产物：通过新旧虚拟 dom 做对比（diff），将变化的地方更新在真实 DOM 上；另外，也需要 diff 高效的执行对比过程，从而降低时间复杂度为 O(n)
+- vue2.x 中为了降低 watcher 粒度，每个组件只有一个 watcher 与之对应，只有引入 diff 才能精确找到发生变化的地方
+- vue 中 diff 执行的时刻是组件实例执行其更新函数时，它会上一次渲染结果 oldVnode 和新的渲染结果 newVnode，此过程称为 patch
+- diff 过程遵循深度优先、同层比较的策略；两个节点之间比较会根据它们是否拥有子节点或者文本节点做不同操作；比较两组子节点是算法的重点，首先假设头尾节点可能相同做 4 次对比尝试，如果没有找到相同节点才按照通用方式遍历查找，查找结束再按情况处理剩下的节点，借助 key 通常可以非常精确找到相同节点，因此整个 patch 过程非常高效
+
+
+
+### 组件化理解
 
 - 组件是独立和可复用的代码组织单元，组件系统是 Vue 核心特性，它使开发者使用小型、独立和通常可复用的逻辑构建大型应用
 - 组件化开发能大幅提高应用开发效率、测试性、复用性等
@@ -217,8 +265,10 @@ vue3 diff 算法采用的是 去头尾的最长递增子序列算法。patchKeye
 
 
 
+## 路由原理
 
-## 导航守卫实现原理
+
+### 导航守卫实现原理
 
 为什么我需要在每个导航中提供 next 函数来进行到下一个守卫？
 
@@ -263,7 +313,9 @@ const iterator = (hook, next) => {
 }
 ```
 
-## keep-alive 原理
+
+
+### keep-alive 原理
 
 keep-alive 组件的作用就是缓存已经创建过的 vnode
 
@@ -283,7 +335,9 @@ keep-alive 组件的作用就是缓存已经创建过的 vnode
 
 keep-alive `abstract: true`：是一个抽象组件，它不会渲染一个 DOM 元素，也不会出现在父组件链中
 
-LRU 缓存策略
+
+
+**LRU 缓存策略（Least recently used，最近最少使用）**
 
 使用一个链表保存缓存数据，根据历史记录访问记录来进行淘汰数据（如果数据最近被访问过，那么将来被访问的几率也更高）
 
@@ -333,7 +387,9 @@ class LRUCache {
 
 
 
-## nextTick 原理
+## 其他原理
+
+### nextTick 原理
 
 1. nextTick 接收一个回调函数时，传入的回调函数会在 callbacks 中存起来，根据一个标记状态 pending 来判断当前是否要执行 timerFunc()
 2. timerFunc() 是根据当前环境判断使用哪种方式实现，按照 Promise.then 和 MutationObserver 以及 setImmediate 的优先级来判断，支持哪个就用哪个，如果执行环境不支持，会采用 setTimeout(fn, 0) 代替
@@ -343,7 +399,7 @@ Promise > MutationObserver > setImmediate > setTimeout
 
 
 
-## scoped 原理
+### scoped 原理
 
 当 style 标签有 scoped 属性时，它通过 postcss 对其进行如下转换
 
@@ -382,7 +438,9 @@ Promise > MutationObserver > setImmediate > setTimeout
 - scoped 后选择器最后默认会加上当前组件的一个标识，比如：`[data-v-xxx]`
 - 用了样式穿透后，在 deep 之后的选择器就不会加上标识
 
-## computed 原理
+
+
+### computed 原理
 
 computed 本质是一个惰性求值的观察者 computed watcher，其内部通过 this.dirty 属性标记计算属性是否需要重新求值
 
