--- a/Network/7.应用层.md
+++ b/Network/7.应用层.md
@@ -573,3 +573,34 @@ Fiddler、Charles等抓包工具的原理：在客户端启动了正向代理服
 需要注意的是：
 
 - Wireshark 的原理：通过底层驱动，拦截网卡上流过的数据
+
+**相关头部字段**
+
+- Via：追加经过的每一台代理服务器的主机名（或域名）
+- X-Forwarded-For：追加请求方的 IP 地址
+- X-Real-IP：客户端的真实 IP 地址
+
+![image-20230724091421339](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230724091421339.png)
+
+### CDN
+
+**CDN（Content Delivery Network 或 Content Distribution Network）**，内容分发网络
+
+- 利用最靠近每位用户的服务器
+- 更快更可靠地将音乐、图片、视频等资源文件（一般是静态资源）传递给用户
+
+CDN 运营商在全国、乃至全球的各个大枢纽城市都建立了机房
+
+- 部署了大量拥有高存储高带宽的节点，构建了一个跨运营商、跨地域的专用网络
+
+内容所有者向 CDN 运营商支付费用，CDN 将其内容交付给最终用户
+
+**使用 CDN 之前**
+
+![image-20230724091847209](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230724091847209.png)
+
+**使用 CDN 之后**
+
+![image-20230724092006897](E:\learn\lagouBigFront\md\Network\img\image-20230724092006897.png)
+
+![image-20230724092727828](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230724092727828.png)
