数组、栈、链表

--- a/Algorithm/1.线性结构-数组-栈结结构.md
+++ b/Algorithm/1.线性结构-数组-栈结结构.md
@@ -1,5 +1,7 @@
 ## 数据结构与算法
 
+> [面试经典 150 题](https://leetcode.cn/studyplan/top-interview-150/)
+
 编程的最终目的只有一个：对数据进行操作和处理
 
 - 术之尽头炁体源流
@@ -10,7 +12,7 @@
 **系统、语言、框架源码随处可见数据结构与算法**
 
 - 无论是操作系统（Windows、Mac OS）本身，还是我们所使用的编程语言（JavaScript、Java、C++、Python等等）还是我们在平时应用程序中用到的框架（Vue、React、Spring、Flask等等），它们的底层实现到处都是数据结构与算法，所以你要想学习一些底层的知识或者某一个框架的源码（比如 Vue、React的源码）是必须要掌握数据结构与算法的
-- 以前端为例：框架中大量使用到了栈结构、队列结构等来解决问题（比如之前框架源码时经常看到这些数据结构，Vue源码、React源码、Webpack源码中可以看到队列、栈结构、队列结构等来解决问题，Webpack中还可以看到很多Graph图结构）
+- 以前端为例：框架中大量使用到了栈结构、队列结构等来解决问题（比如之前框架源码时经常看到这些数据结构，Vue 源码、React 源码、Webpack 源码中可以看到队列、栈结构、队列结构等来解决问题，Webpack 中还可以看到很多 Graph 图结构）
 - 实现语言或者引擎本身也需要大量的数据结构：哈希表结构、队列结构（微任务队列、宏任务队列），前端无处不在的数据结构：DOM Tree（树结构）、AST（抽象语法树）
 
 因为对于很多企业来说，想要短时间考察一个人的能力以及未来的潜力，数据结构与算法是非常重要的指标，也会成为它们的硬性条件
@@ -87,7 +89,7 @@
 
 - 数据元素的个数 n 定义为表的长度=`list.length()`（`list.length()=0` 时称为空表）
 - 将非空的线性表（n>=1）记作：（a[0]、a[1]、a[2]...a[n-1]）
-- 数据元素a[i]（0<=i<=n-1）只是个抽象符号，其具体含义在不同情况下可以不同
+- 数据元素 a[i]（0<=i<=n-1）只是个抽象符号，其具体含义在不同情况下可以不同
 
 上面是维基百科对于线性结构的定义，有一点点抽象，其实我们只需要记住几个常见的线性结构即可
 
@@ -109,18 +111,18 @@
 
 - 栈也是一种非常常见的数据结构，并且在程序中的应用非常广泛
 - 数组
-  - 我们知道数组是一种**线性结构**，并且可以在数组的**任意位置**插入和删除数据
-  - 但是有时候，我们为了实现某些功能，必须对这种**任意性**加以**限制**
-  - 而**栈和队列**就是比较常见的受限的线性结构
+  - 我们知道数组是一种 **线性结构**，并且可以在数组的 **任意位置** 插入和删除数据
+  - 但是有时候，我们为了实现某些功能，必须对这种 **任意性** 加以 **限制**
+  - 而 **栈和队列** 就是比较常见的受限的线性结构
 
 ![image-20230519102813445](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230519102813445.png)
 
 栈（Stack），它是一种受限的数据结构，**后进先出（LIFO）**
 
-- 其限制是仅允许在**表的一端**进行插入和删除运算。这一端被称为**栈顶**，相对地，把另一端称为**栈底**
+- 其限制是仅允许在 **表的一端** 进行插入和删除运算。这一端被称为 **栈顶**，相对地，把另一端称为 **栈底**
 - LIFO（last in first out）表示就是后进入的元素，第一个弹出栈空间。类似于自动餐托盘，最后放上的托盘，往往先把它拿出去使用
-- 向一个栈插入新元素又称作**进栈、入栈或压栈**，它是把新元素放到栈顶元素的上面，使之成为栈顶元素
-- 从一个栈删除元素又称作出**栈或退栈**，它是把栈顶元素删除掉，使其相邻的元素成为新的栈顶元素
+- 向一个栈插入新元素又称作 **进栈、入栈或压栈**，它是把新元素放到栈顶元素的上面，使之成为栈顶元素
+- 从一个栈删除元素又称作出 **栈或退栈**，它是把栈顶元素删除掉，使其相邻的元素成为新的栈顶元素
 
 **题目**
 
@@ -297,3 +299,42 @@ function decimalToBinary(decimal: number): string {
 ```
 
 ### 有效括号
+
+> [20.有效括号](https://leetcode.cn/problems/valid-parentheses/?envType=study-plan-v2&envId=top-interview-150)
+
+给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效
+
+有效字符串需满足：
+
+- 左括号必须用相同类型的右括号闭合
+- 左括号必须以正确的顺序闭合
+- 每个右括号都有一个对应的相同类型的左括号
+
+```typescript
+import ArrayStack from './stack_refactor'
+
+function isValid(s: string): boolean {
+  // 创建栈结构
+  const stack = new ArrayStack<string>()
+  // 2.遍历s中所有的括号
+  for (let i = 0; i < s.length; i++) {
+    const c = s[i]
+    switch (c) {
+      case '(':
+        stack.push(')')
+        break
+      case '{':
+        stack.push('}')
+        break
+      case '[':
+        stack.push(']')
+        break
+      default:
+        if (c !== stack.pop()) return false
+        break
+    }
+  }
+  return stack.isEmpty()
+}
+```
+
