--- a/Algorithm/2.队列结构-链表.md
+++ b/Algorithm/2.队列结构-链表.md
@@ -229,7 +229,7 @@ class Node<T> {
 class LinkedList<T> {
   private head: Node<T> | null = null
   private size: number = 0
-  get lenght() {
+  get length() {
     return this.size
   }
 }
@@ -263,7 +263,7 @@ class Node<T> {
 class LinkedList<T> {
   private head: Node<T> | null = null
   private size: number = 0
-  get lenght() {
+  get length() {
     return this.size
   }
   // 根据position获取到当前的节点（不是节点的value，而是获取节点）
@@ -394,6 +394,26 @@ class LinkedList<T> {
 - `void addAtIndex(int index, int val)` 将一个值为 `val` 的节点插入到链表中下标为 `index` 的节点之前。如果 `index` 等于链表的长度，那么该节点会被追加到链表的末尾。如果 `index` 比长度更大，该节点将 **不会插入** 到链表中
 - `void deleteAtIndex(int index)` 如果下标有效，则删除链表中下标为 `index` 的节点
 
+抽离接口方法
+
+```typescript
+interface IList<T> {
+  peek(): T | undefined
+  isEmpty(): boolean
+  size(): number
+}
+
+interface ILinkedList<T> extends IList<T> {
+  append(value: T): void
+  traverse(): void
+  insert(value: T, position: number): boolean
+  get(position: number): T | null
+  update(value: T, position: number): boolean
+  indexOf(value: T): number
+  remove(value: T): T | null
+}
+```
+
 ### 删除链表中的节点
 
 > [237. 删除链表中的节点](https://leetcode.cn/problems/delete-node-in-a-linked-list/)
@@ -427,3 +447,85 @@ function deleteNode(node: ListNode | null): void {
 }
 ```
 
+### 反转链表
+
+> [206. 反转链表](https://leetcode.cn/problems/reverse-linked-list/)
+
+给你单链表的头节点 `head` ，请你反转链表，并返回反转后的链表
+
+**利用栈结构解决**
+
+```typescript
+function reverseList(head: ListNode | null): ListNode | null {
+  if (head === null) return null
+  if (head.next === null) return head
+  const stack: ListNode[] = []
+  let current: ListNode | null = head
+  while (current) {
+    stack.push(current)
+    current = current.next
+  }
+  let newHead: ListNode = stack.pop()!
+  let newHeadCurrent = newHead
+  while (stack.length) {
+    const node = stack.pop()!
+    newHeadCurrent.next = node
+    newHeadCurrent = newHeadCurrent.next
+  }
+  // 注意：获取到最后一个节点时，一定要将节点的 next 置为 null
+  newHeadCurrent.next = null
+  return newHead
+}
+
+const node1 = new ListNode(1)
+node1.next = new ListNode(2)
+node1.next.next = new ListNode(3)
+const newHead = reverseList(node1)
+let current = newHead
+while (current) {
+  console.log(current.val)
+  current = current.next
+}
+```
+
+**非递归方式**
+
+1. 让 current 指向下一个节点
+   - 目的：保留着下一个节点的引用，可以拿到，并且不会销毁
+
+2. 改变 head 当前指向的节点，指向 newHead
+   - 对于第一个节点来说，指向 newHead 就是指向 null
+
+3. 让 newHead 指向 head 节点
+   - 目的是下一次遍历时，第二步操作，可以让下一个节点指向第一个节点
+4. 让 head 移向下一个节点，指向 current
+
+```typescript
+function reverseList(head: ListNode | null): ListNode | null {
+  if (head === null || head.next === null) return head
+  let newHead: ListNode | null = null
+  while (head) {
+    let current: ListNode | null = head.next
+    head.next = newHead
+    newHead = head
+    head = current
+  }
+  return newHead
+}
+```
+
+![image-20230814165306901](E:\learn\lagouBigFront\md\Algorithm\img\image-20230814165306901.png)
+
+**递归方式**
+
+- 第一次进入 `const newHead` 下面的代码是倒数第二个节点，因为倒数第一个节点的 next 为 null
+
+```typescript
+function reverseList(head: ListNode | null): ListNode | null {
+  if (head === null || head.next === null) return head
+  const newHead = reverseList(head.next)
+  head.next.next = head
+  head.next = null
+  return newHead
+}
+```
