--- a/Algorithm/3.算法复杂度-哈希表.md
+++ b/Algorithm/3.算法复杂度-哈希表.md
@@ -270,7 +270,7 @@ console.log('索引为：', index2, '。消耗的时间：', endTime2 - startTim
 
 - 装填因子表示当前哈希表中已经包含的数据项和整个哈希表长度的比值
 - 装填因子 = 总数据项 / 哈希表长度
-- 开放地址法的装填肉子最大是多少呢? 1，因为它必须寻找到空白的单元才能将元素放入
+- 开放地址法的装填肉子最大是多少呢？ 1，因为它必须寻找到空白的单元才能将元素放入
 - 链地址法的装填因子呢？可以大于1，因为拉链法可以无限的延伸下去，只要你愿意。(当然后面效率就变低了)
 
 **线性探测效率**
@@ -293,9 +293,54 @@ console.log('索引为：', index2, '。消耗的时间：', endTime2 - startTim
 那么我们现在就可以求出查找成功和不成功的次数了
 
 - 成功可能只需要查找链表的一半即可: `1 + loadFactor/ 2`
-- 不成功呢?可能需要将整个链表查询完才知道不成功: `1 + loadFactor`
+- 不成功呢？可能需要将整个链表查询完才知道不成功: `1 + loadFactor`
 
 经过上面的比较我们可以发现，链地址法相对来说效率是好于开放地址法的。所以在真实开发中，使用链地址法的情况较多
 
 - 因为它不会因为添加了某元素后性能急剧下降
 - 比如在 Java 的 HashMap 中使用的就是链地址法
+
+## 哈希函数
+
+- 哈希表的主要优点是它的速度，所以在速度上不能满足，那么就达不到设计的目的了
+- 提高速度的一个办法就是让哈希函数中尽量少的有乘法和除法。因为它们的性能是比较低的
+
+快速的计算
+
+- 哈希表的优势就在于效率，所以快速获取到对应的 hashCode 非常重要
+- 我们需要通过快速的计算来获取到元素对应的 hashCode
+
+均匀的分布
+
+- 哈希表中，无论是链地址法还是开放地址法，当多个元素映射到同一个位置的时候，都会影响效率
+- 所以，优秀的哈希函数应该尽可能将元素映射到不同的位置，让元素在哈希表中均匀的分布
+
+![image-20230821160715569](E:\learn\lagouBigFront\md\Algorithm\img\image-20230821160715569.png)
+
+**均匀分布**
+
+- 在设计哈希表时，已经有办法处理映射到相同下标值的情况：链地址法和开放地址法
+- 但是无论哪种方案，为了提供效率，最好的情况还是让数据在哈希表中均匀分布
+- 因此，我们需要再使用常量的地方，尽量使用质数
+
+质数的使用
+
+- 哈希表的长度
+- N 次幂的底数（之前使用的是 27）
+
+为什么他们使用质数，会让哈希表分布更加均匀呢？
+
+- 质数和其他数相乘的结果相比于其他数字更容易产生唯一性的结果，减少哈希冲突
+- Java 中的 N 次幂的底数选择的是 31，是经过长期观察分布结果得出的
+
+### Java 中的 HashMap
+
+Java 中的哈希表采用的是链地址法
+
+HashMap 的初始长度是 16，每次自动扩展，长度必须是 2 的次幂
+
+- 为了服务于 Key 映射到 index 的算法。60000000 % 100 = 数字。下标值
+
+HashMap 中为了提高效率，才用了位运算的方式
+
+- HashMap 中的 index 计算公式：index = HashCode(Key) & (Length - 1)
