--- a/Algorithm/3.算法复杂度-哈希表.md
+++ b/Algorithm/3.算法复杂度-哈希表.md
@@ -343,4 +343,59 @@ HashMap 的初始长度是 16，每次自动扩展，长度必须是 2 的次幂
 
 HashMap 中为了提高效率，才用了位运算的方式
 
-- HashMap 中的 index 计算公式：index = HashCode(Key) & (Length - 1)
+- HashMap 中的 index 计算公式：`index = HashCode(Key) & (Length - 1)`
+- 比如计算 book 的 hashcode，结果为十进制的 3029737，二进制的 101110001110101110 1001
+- 假定 HashMap 长度是默认的 16，计算 Lenght - 1 的结果为十进制的 15，二进制的 1111
+- 把以上两个结果做与运算，101110001110101110 1001 & 1111 = 1001，十进制是 9，所以 index=9
+
+个人发现 JavaScript 进行较大数据的位运算时会出问题，所以一下代码实现中还是使用取模
+
+- 另外，为了方便代码之后向开放地址法中迁移，容量还是选择使用质数
+
+这里采用质数的原因是为了产生的数据不按照某种规律递增
+
+- 比如我们这里有一组数据是按照4进行递增的：0 4 8 12 16，将其映射到长度为 8 的哈希表中
+- 它们的位置是多少呢? 0 -4 -0 4，依次类推
+- 如果我们哈希表本身不是质数，而我们递增的数量可以使用质数，比如 5，那么0 5 10 15 20
+- 它们的位置是多少呢? 0 -5 -2 -7 -4，依次类推。也可以尽量让数据均匀的分布
+- 我们之前使用的是 27，这次可以使用一个接近的数，比如 31/37/41 等等。一个比较常用的数是 31 或 37
+
+这里建议两处使用质数：
+
+- 哈希表中数组的长度
+- N 次幂的底数 
+
+### 哈希表实现
+
+```typescript
+/**
+ * 哈希函数，将 key 映射成 index
+ * @param key 转换的 key
+ * @param max 数组的长度（最大的数值）
+ * @returns
+ */
+function hashFunc(key: string, max: number): number {
+  // 1.计算hashCode cats=>60337(27为底)
+  let hashCode = 0
+  const length = key.length
+  for (let i = 0; i < length; i++) {
+    // 霍纳法则计算 hashCode
+    hashCode = 31 * hashCode + key.charCodeAt(i)
+  }
+  // 2.求出索引值
+  const index = hashCode % max
+  return index
+}
+```
+
+这里采用链地址法实现哈希表
+
+- 实现的哈希表（基于 storage 的数组）每个 index 对应的是一个数组（bucket）
+- bucket 中存放什么呢？我们最好将 key 和 value 都放进去，我们继续使用一个数组
+- 最终我们的哈希表的数据格式是这样：`[[[k, v], [k, v], [k, v]]]`
+
+哈希表的插入和修改操作是同一个函数
+
+- 因为，当使用者传入一个 <Key, Value> 时
+- 如果原来不存该 key，那么就是插入操作
+- 如果已经存在该 key，那么就是修改操作
