--- a/Algorithm/3.算法复杂度-哈希表.md
+++ b/Algorithm/3.算法复杂度-哈希表.md
@@ -315,7 +315,7 @@ console.log('索引为：', index2, '。消耗的时间：', endTime2 - startTim
 - 哈希表中，无论是链地址法还是开放地址法，当多个元素映射到同一个位置的时候，都会影响效率
 - 所以，优秀的哈希函数应该尽可能将元素映射到不同的位置，让元素在哈希表中均匀的分布
 
-![image-20230821160715569](E:\learn\lagouBigFront\md\Algorithm\img\image-20230821160715569.png)
+![image-20230821160715569](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230821160715569-16932086456594.png)
 
 **均匀分布**
 
@@ -331,7 +331,9 @@ console.log('索引为：', index2, '。消耗的时间：', endTime2 - startTim
 为什么他们使用质数，会让哈希表分布更加均匀呢？
 
 - 质数和其他数相乘的结果相比于其他数字更容易产生唯一性的结果，减少哈希冲突
-- Java 中的 N 次幂的底数选择的是 31，是经过长期观察分布结果得出的
+- Java 中的 N 次幂的底数选择的是 31，是经过长期观察分布结果得出的。`31 * i` 可以用 `(i << 5) - i` 来计算，位移操作效率更高
+
+> [Java中的hashCode的计算方法与原理](https://blog.csdn.net/weixin_43145361/article/details/105904810)
 
 ### Java 中的 HashMap
 
@@ -341,14 +343,24 @@ HashMap 的初始长度是 16，每次自动扩展，长度必须是 2 的次幂
 
 - 为了服务于 Key 映射到 index 的算法。60000000 % 100 = 数字。下标值
 
-HashMap 中为了提高效率，才用了位运算的方式
+HashMap 中为了提高效率，采用了位运算的方式
 
 - HashMap 中的 index 计算公式：`index = HashCode(Key) & (Length - 1)`
 - 比如计算 book 的 hashcode，结果为十进制的 3029737，二进制的 101110001110101110 1001
 - 假定 HashMap 长度是默认的 16，计算 Lenght - 1 的结果为十进制的 15，二进制的 1111
 - 把以上两个结果做与运算，101110001110101110 1001 & 1111 = 1001，十进制是 9，所以 index=9
 
-个人发现 JavaScript 进行较大数据的位运算时会出问题，所以一下代码实现中还是使用取模
+```java
+public static int hashCode(byte[] value) {
+  int h = 0;
+  for (byte v : value) {
+    h = 31 * h + (v & 0xff);
+  }
+  return h;
+}
+```
+
+Java 里是如上计算的，使用到了位运算，但是在 JavaScript 进行较大数据的位运算时会出问题，所以一下代码实现中还是使用取模
 
 - 另外，为了方便代码之后向开放地址法中迁移，容量还是选择使用质数
 
@@ -364,8 +376,6 @@ HashMap 中为了提高效率，才用了位运算的方式
 
 - 哈希表中数组的长度
 - N 次幂的底数 
-
-### 哈希表实现
 
 ```typescript
 /**
@@ -388,6 +398,110 @@ function hashFunc(key: string, max: number): number {
 }
 ```
 
+### HashMap 与 Hashtable 区别
+
+1. 同步性、安全性
+
+   - Hashtable 方法都加了 synchronized（同步器），线程都需要排队进行所以线程安全
+   - HashMap 非线程安全，性能会更好
+
+   ![image-20230828152032350](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828152032350.png)
+
+2. 继承父类不同
+
+   - Hashtable 继承于 Dictionary
+   - HashMap 继承于 AbstractMap
+
+   ![image-20230828152011081](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828152011081.png)
+
+   ![image-20230828153652314](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828153652314.png)
+
+3. 否可以使用 null 作为 key
+
+   - Hashtable 会选判断一下 value 的值不为 null，如果为 null 会报空指针异常
+   - HashMap key 可以为 null，计算下标为 0
+
+   ![image-20230828152112074](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828152112074.png)
+
+   ![image-20230828153714971](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828153714971.png)
+
+4. 遍历方式不同
+
+   - Hashtable 使用 Enumeration 遍历
+   - HashMap 使用 Iterator 遍历
+
+   ![image-20230828152207428](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828152207428.png)
+
+5. 初始化、扩容方式不同
+
+   - Hashtable 默认初始大小为 11，在调用构造函数中初始化，每次扩容都是向左位移一位再加一（`<<1+1 -> *2+1`）
+   - HashMap 默认初始大小是 16，没有在调用构造函数中初始化，在第一次调用 put 之后才会初始化，每次扩容都是向左位移一位（`<<1 -> *2`），并且要求容量是 2^n，保证计算下标效率
+
+   ![image-20230828152428019](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828152428019.png)
+
+   ![image-20230828152409740](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828152409740.png)
+
+   ![image-20230828153000360](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828153000360.png)
+
+6. 计算 hash 方式不同
+
+   - Hashtable 计算 hash 是直接使用 key 的 hashcode 之后与数组的长度直接进行取余
+
+     0x7FFFFFFF 最大整型树
+
+   - HashMap 计算 hash 对 key 的 hashcode 进行了二次 hash（取哈希值并高位向右移进行异或运算），然后与数组长度取模
+
+     HashMap 效率虽然提高了，但是 hash 冲突也增加了，因为它得出的 hash 的低位相同的概率比较高，而计算位运算解决这个问题，HashMap 重新根据 hashcode 计算 has 值后，又对 hash 做了一些运算来打散数据，使得取得的位置更加分散，从而减少 hash 冲突
+
+   ![image-20230828154110845](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828154110845.png)
+
+   ![image-20230828153920205](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828153920205.png)
+
+   ![image-20230828154323131](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230828154323131.png)
+
+7. 内部实现方式不同
+
+   - Hashtable 使用数组+链表
+   - HashMap 采用数组+链表+红黑树
+
+**HashMap**
+
+1. HashMap 底层是采用了数组这样一个结构来存储数据元素，数据默认长度是 16
+
+2. 当我们通过 put 方法去添加数据的时候，HashMap 会根据 Key 的 hash 值进行取模运算，最终把这样的一个值保存到数组一个指定位置
+
+3. 但是这样一个设计方式会存在 hash 冲突问题，也就是说两个不同 hash 值的 key 最终取模以后会落到同一个数组下标
+
+4. 所以 HashMap 引入了一个链式寻址法来解决  hash 冲突问题，也就是对于存在冲突的 key，HashMap 把这些 key 组成一个单向链表，然后采用尾插法，把这样一个 key 保存到链表的尾部
+
+5. 为了避免链表过长，导致查询效率下降，所以当链表大于 8 并且数组长度大于等于 64 的时候，HashMap 会把当前链表转换为红黑树，从而减少链表数据查询的时间复杂度，提升查询效率
+
+6. 解决 hash 冲突方法有很多
+
+   - 再 hash 法：如果某个 hash 函数产生了冲突，再用另外一个 hash 进行计算，比如布隆过滤器就采用了这种方法
+
+   - 开放寻址法，就是直接从冲突的数组位置往下寻找一个空的数组下标进行数据存储，这个在 ThreadLocal 里面有使用到
+
+   - 链式寻址法，就是把存在 hash 冲突的 key 以单向链表的方式来进行存储，这个在 HashMap 里面有使用到
+
+     在 JDK1.8 中使用链式寻址法及红黑树来解决 hash 冲突问题，红黑树是为了优化 hash 表链表过长导致时间复杂度增加的一个问题。当链表长度大于 8，并且 hash 表的容量大于 64 的时候再向链表中添加元素就会触发链表向红黑树的转化
+
+   - 建立公共溢出区，把 hash 表分为基本表、溢出表两个部分，把存在冲突的 key 统一放在一个公共溢出表里面
+
+**总结**
+
+- 长度不够会动态扩容，`threshold（临界值）=loadFactor（负载因子）*capacity（容量大小）`
+
+  loadFactor 默认值 0.75，capacity 默认值 16，当元素个数达到 12 的时候会触发扩容，扩容的大小是原来的 2 倍
+
+- 扩容因子表示 Hash 表中的元素填充程度。扩容因子值越大意味着触发扩容的元素个数更多，虽然整体空间利用率比较高，但是 Hash 冲突的概率也会增加，扩容因子越小，Hash 冲突概率越小，但是内存空间的浪费就变多了。扩容因子本质上就是冲突的概率以及空间利用率之间的平衡，0.75 和统计学泊松分布
+
+  HashMap 里面采用的是链式寻址的方式解决 Hash 冲突，为了避免链表过长带来一个时间复杂度增加的情况，链表长度 >=7 就会转换红黑树，提升检索效率。扩容因子在 0.75 时，链表长度达到 8 的可能几乎为 0，比较好的达到一个空间成本和时间成本的平衡
+
+- 最大容量是 Integer.MAX_VALUE，即 `2^31 - 1`
+
+### 哈希表实现
+
 这里采用链地址法实现哈希表
 
 - 实现的哈希表（基于 storage 的数组）每个 index 对应的是一个数组（bucket）
@@ -399,3 +513,191 @@ function hashFunc(key: string, max: number): number {
 - 因为，当使用者传入一个 <Key, Value> 时
 - 如果原来不存该 key，那么就是插入操作
 - 如果已经存在该 key，那么就是修改操作
+
+删除数据
+
+- 根据对应的 key，删除对应的 key/value
+
+```typescript
+class HashTable<T = any> {
+  // 创建一个数组，用来存放链地址法中的链（数组）
+  private storage: [string, T][][] = []
+  // 定义数组的长度
+  private length: number = 7
+  // 记录已经存放元素的个数
+  private count: number = 0
+  // 计算索引值
+  private getIndex(key: string, max: number): number {
+    let hashCode = 0
+    const length = key.length
+    for (let i = 0; i < length; i++) {
+      // 霍纳法则计算 hashCode
+      hashCode = 31 * hashCode + key.charCodeAt(i)
+    }
+    const index = hashCode % max
+    return index
+  }
+
+  // 插入/修改
+  put(key: string, value: T) {
+    // 1.根据key获取数组中对应的索引值
+    const index = this.getIndex(key, this.length)
+    // 2.取出索引值对应位置的数组（桶）
+    let bucket = this.storage[index]
+    // 3.判断bucket是否有值
+    if (!bucket) {
+      bucket = []
+      this.storage[index] = bucket
+    }
+    // 4.确定已经有一个数组，但是数组中是否已经存在key是不确定的
+    let isUpdate = false
+    for (let i = 0; i < bucket.length; i++) {
+      const tuple = bucket[i]
+      const tupleKey = tuple[0]
+      if (tupleKey === key) {
+        isUpdate = true
+        tuple[1] = value
+      }
+    }
+    // 5.如果上面的代码没有进行覆盖，那么在该位置进行添加
+    if (!isUpdate) {
+      bucket.push([key, value])
+      this.count++
+    }
+  }
+
+  // 获取值
+  get(key: string): T | undefined {
+    // 1.根据key获取索引值index
+    const index = this.getIndex(key, this.length)
+    // 2.获取bucket（桶）
+    const bucket = this.storage[index]
+    if (!bucket) return undefined
+    // 3.对bucket进行遍历
+    for (let i = 0; i < bucket.length; i++) {
+      const tuple = bucket[i]
+      const tupleKey = tuple[0]
+      const tupleValue = tuple[1]
+      if (tupleKey === key) {
+        return tupleValue
+      }
+      return undefined
+    }
+  }
+
+  // 删除操作
+  delete(key: string): T | undefined {
+    // 1.获取索引值的位置
+    const index = this.getIndex(key, this.length)
+    // 2.获取bucket（桶）
+    const bucket = this.storage[index]
+    if (!bucket) return undefined
+    for (let i = 0; i < bucket.length; i++) {
+      const tuple = bucket[i]
+      const tupleKey = tuple[0]
+      const tupleValue = tuple[1]
+      if (tupleKey === key) {
+        bucket.splice(i, 1)
+        this.count--
+        return tupleValue
+      }
+    }
+  }
+}
+```
+
+### 哈希表扩容
+
+为什么需要扩容？
+
+- 目前，我们是将所有的数据项放在长度为 7 的数组中的
+- 因为我们使用的是链地址法，loadFactor 可以大于 1，所以这个哈希表可以无限制的插入新数据
+- 但是，随着数据量的增多，每一个 index 对应的 bucket 会越来越长，也就造成效率的降低
+- 所以，在合适的情况对数组进行扩容，比如扩容两倍
+
+如何进行扩容？
+
+- 扩容可以简单的将容量增大两倍（质数问题）
+- 但是这种情况下，所有的数据项一定要同时进行修改（重新调用哈希函数，来获取到不同的位置）
+- 比如 hashCode=12 的数据项，在 length=8 的时候，index=4。在长度为 16 的时候呢？index=12
+- 这是一个耗时的过程，但是如果数组需要扩容，那么这个过程是必要的
+
+```typescript
+class HashTable<T = any> {
+  private resize(newLength: number) {
+    // 设置新的长度
+    this.length = newLength
+    // 获取原来所有的数据，并且重新放入到新的容量数组中
+    // 1.对数据进行初始化操作
+    const oldStorage = this.storage
+    this.storage = []
+    this.count = 0
+    // 2.获取原来数，放入新的数组中
+    oldStorage.forEach(bucket => {
+      if (!bucket) return
+      for (let i = 0; i < bucket.length; i++) {
+        const tuple = bucket[i]
+        this.put(tuple[0], tuple[1])
+      }
+    })
+  }
+  put(key: string, value: T) {
+    if (!isUpdate) {
+      // 如果loadFactor大于0.75，扩容操作
+      const loadFactor = this.count / this.length
+      if (loadFactor > 0.75) {
+        this.resize(this.length * 2)
+      }
+    }
+  }
+  delete(key: string): T | undefined {
+    for (let i = 0; i < bucket.length; i++) {
+      if (tupleKey === key) {
+        // 如果loadFactor小于0.25，缩容操作
+        const loadFactor = this.count / this.length
+        if (loadFactor < 0.25 && this.length > 7) {
+          this.resize(Math.floor(this.length / 2))
+        }
+      }
+    }
+  }
+}
+```
+
+### 容量质数
+
+容量最好是质数
+
+- 虽然在链地址法中将容量设置为质数，没有在开放地址法中重要
+- 但是其实链地址法中质数作为容量也更利于数据的均匀分布
+
+质数的特点
+
+- 质数也称为素数
+- 质数表示大于 1 的自然数中，只能被 1 和自己整除的数
+
+```typescript
+class HashTable<T = any> {
+  private isPrime(num: number): boolean {
+    const sqrt = Math.sqrt(num)
+    for (let i = 2; i <= sqrt; i++) {
+      if (num % i === 0) {
+        return false
+      }
+    }
+    return true
+  }
+  private getNextPrime(num: number) {
+    let newPrime = num
+    while (!this.isPrime(newPrime)) {
+      newPrime++
+    }
+    if (newPrime < 7) newPrime = 7
+    return newPrime
+  }
+  private resize(newLength: number) {
+    this.length = this.getNextPrime(newLength)
+  }
+}
+```
+
