二叉搜索树

--- a/Algorithm/2.队列结构-链表.md
+++ b/Algorithm/2.队列结构-链表.md
@@ -514,7 +514,7 @@ function reverseList(head: ListNode | null): ListNode | null {
 }
 ```
 
-![image-20230814165306901](E:\learn\lagouBigFront\md\Algorithm\img\image-20230814165306901.png)
+![image-20230814165306901](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230814165306901.png)
 
 **递归方式**
 
