--- a/Algorithm/3.算法复杂度-哈希表.md
+++ b/Algorithm/3.算法复杂度-哈希表.md
@@ -263,15 +263,15 @@ console.log('索引为：', index2, '。消耗的时间：', endTime2 - startTim
 
 - 如果没有产生冲突，那么效率就会更高
 - 如果发生冲突，存取时间就依赖后来的探测长度
-- 平均探测长度以及平均存取时间，取决于填装因子，随着填装因子变大，探测长度也越来越长
-- 随着填装因子变大，效率下降的情况，在不同开放地址法方案中比链地址法更严重，所以我们来对比一下他们的效率，再决定我们选取的方案
+- 平均探测长度以及平均存取时间，取决于装填因子，随着装填因子变大，探测长度也越来越长
+- 随着装填因子变大，效率下降的情况，在不同开放地址法方案中比链地址法更严重，所以我们来对比一下他们的效率，再决定我们选取的方案
 
 **装填因子**
 
 - 装填因子表示当前哈希表中已经包含的数据项和整个哈希表长度的比值
 - 装填因子 = 总数据项 / 哈希表长度
 - 开放地址法的装填肉子最大是多少呢？ 1，因为它必须寻找到空白的单元才能将元素放入
-- 链地址法的装填因子呢？可以大于1，因为拉链法可以无限的延伸下去，只要你愿意。(当然后面效率就变低了)
+- 链地址法的装填因子呢？可以大于1，因为链地址法可以无限的延伸下去，只要你愿意。(当然后面效率就变低了)
 
 **线性探测效率**
 
@@ -617,7 +617,7 @@ class HashTable<T = any> {
 
 如何进行扩容？
 
-- 扩容可以简单的将容量增大两倍（质数问题）
+- 扩容可以简单的将容量增大两倍（但是这里变大两倍会出现不是质数问题）
 - 但是这种情况下，所有的数据项一定要同时进行修改（重新调用哈希函数，来获取到不同的位置）
 - 比如 hashCode=12 的数据项，在 length=8 的时候，index=4。在长度为 16 的时候呢？index=12
 - 这是一个耗时的过程，但是如果数组需要扩容，那么这个过程是必要的
@@ -697,6 +697,143 @@ class HashTable<T = any> {
   }
   private resize(newLength: number) {
     this.length = this.getNextPrime(newLength)
+  }
+}
+```
+
+### 完整代码
+
+```typescript
+class HashTable<T = any> {
+  // 创建一个数组，用来存放链地址法中的链（数组）
+  storage: [string, T][][] = []
+  // 定义数组的长度
+  private length: number = 7
+  // 记录已经存放元素的个数
+  private count: number = 0
+  // 计算索引值
+  private getIndex(key: string, max: number): number {
+    let hashCode = 0
+    const length = key.length
+    for (let i = 0; i < length; i++) {
+      // 霍纳法则计算 hashCode
+      hashCode = 31 * hashCode + key.charCodeAt(i)
+    }
+    const index = hashCode % max
+    return index
+  }
+  // 获取下一个质数
+  private getNextPrime(num: number) {
+    let newPrime = num
+    while (!this.isPrime(newPrime)) {
+      newPrime++
+    }
+    if (newPrime < 7) newPrime = 7
+    return newPrime
+  }
+  // 扩容/缩容
+  private resize(newLength: number) {
+    // 设置新的长度
+    this.length = this.getNextPrime(newLength)
+    console.log(this.length, 'new')
+
+    // 获取原来所有的数据，并且重新放入到新的容量数组中
+    // 1.对数据进行初始化操作
+    const oldStorage = this.storage
+    this.storage = []
+    this.count = 0
+    // 2.获取原来数，放入新的数组中
+    oldStorage.forEach(bucket => {
+      if (!bucket) return
+      for (let i = 0; i < bucket.length; i++) {
+        const tuple = bucket[i]
+        this.put(tuple[0], tuple[1])
+      }
+    })
+  }
+  // 是否是质数
+  private isPrime(num: number): boolean {
+    // 质数的特点：只能被1和num整除
+    const sqrt = Math.sqrt(num)
+    for (let i = 2; i <= sqrt; i++) {
+      if (num % i === 0) {
+        return false
+      }
+    }
+    return true
+  }
+  // 插入/修改
+  put(key: string, value: T) {
+    // 1.根据key获取数组中对应的索引值
+    const index = this.getIndex(key, this.length)
+    // 2.取出索引值对应位置的数组（桶）
+    let bucket = this.storage[index]
+    // 3.判断bucket是否有值
+    if (!bucket) {
+      bucket = []
+      this.storage[index] = bucket
+    }
+    // 4.确定已经有一个数组，但是数组中是否已经存在key是不确定的
+    let isUpdate = false
+    for (let i = 0; i < bucket.length; i++) {
+      const tuple = bucket[i]
+      const tupleKey = tuple[0]
+      if (tupleKey === key) {
+        isUpdate = true
+        tuple[1] = value
+      }
+    }
+    // 5.如果上面的代码没有进行覆盖，那么在该位置进行添加
+    if (!isUpdate) {
+      bucket.push([key, value])
+      this.count++
+      // 如果loadFactor大于0.75，扩容操作
+      const loadFactor = this.count / this.length
+      if (loadFactor > 0.75) {
+        this.resize(this.length * 2)
+      }
+    }
+  }
+  // 获取值
+  get(key: string): T | undefined {
+    // 1.根据key获取索引值index
+    const index = this.getIndex(key, this.length)
+    // 2.获取bucket（桶）
+    const bucket = this.storage[index]
+    if (!bucket) return undefined
+    // 3.对bucket进行遍历
+    for (let i = 0; i < bucket.length; i++) {
+      const tuple = bucket[i]
+      const tupleKey = tuple[0]
+      const tupleValue = tuple[1]
+      if (tupleKey === key) {
+        return tupleValue
+      }
+      return undefined
+    }
+  }
+  // 删除操作
+  delete(key: string): T | undefined {
+    // 1.获取索引值的位置
+    const index = this.getIndex(key, this.length)
+    // 2.获取bucket（桶）
+    const bucket = this.storage[index]
+    if (!bucket) return undefined
+    for (let i = 0; i < bucket.length; i++) {
+      const tuple = bucket[i]
+      const tupleKey = tuple[0]
+      const tupleValue = tuple[1]
+      if (tupleKey === key) {
+        bucket.splice(i, 1)
+        this.count--
+        // 如果loadFactor小于0.25，缩容操作
+        const loadFactor = this.count / this.length
+        if (loadFactor < 0.25 && this.length > 7) {
+          this.resize(Math.floor(this.length / 2))
+        }
+        return tupleValue
+      }
+    }
   }
 }
 ```
