完善树结构

--- a/Algorithm/4.树结构.md
+++ b/Algorithm/4.树结构.md
@@ -709,7 +709,223 @@ class TreeNode<T> extends Node<T> {
 - 这样相对比较简单，每次删除节点不会改变原有的树结构
 - 但是在二叉树的存储中，还保留这那些本已经被删除掉的节点
 
-## 二叉搜索树缺陷
+### 完整代码
+
+```typescript
+import { btPrint } from 'hy-algokit'
+
+class INode<T> {
+  value: T
+  constructor(value: T) {
+    this.value = value
+  }
+}
+class TreeNode<T> extends Node<T> {
+  left: TreeNode<T> | null = null
+  right: TreeNode<T> | null = null
+  parent: TreeNode<T> | null = null
+  get isLeft(): boolean {
+    return !!(this.parent && this.parent.left === this)
+  }
+  get isRight(): boolean {
+    return !!(this.parent && this.parent.right === this)
+  }
+}
+class BSTree<T> {
+  private root: TreeNode<T> | null = null
+  print() {
+    btPrint(this.root)
+  }
+  private searchNode(value: T): TreeNode<T> | null {
+    let current = this.root
+    let parent: TreeNode<T> | null = null
+    while (current) {
+      if (current.value === value) return current
+      parent = current
+      if (current.value < value) {
+        current = current.right
+      } else {
+        current = current.left
+      }
+      if (current) current.parent = parent
+    }
+    return null
+  }
+  /** 插入数据的操作 */
+  insert(value: T) {
+    // 1.根据传入value创建Node(TreeNode)节点
+    const newNode = new TreeNode(value)
+    // 2.判断当前是否已经有了根节点
+    if (!this.root) {
+      // 当前树为空
+      this.root = newNode
+    } else {
+      // 树中已经有其他值
+      this.insertNode(this.root, newNode)
+    }
+  }
+  private insertNode(node: TreeNode<T>, newNode: TreeNode<T>) {
+    if (newNode.value < node.value) {
+      // 去左边继续查找空白位置
+      if (node.left === null) {
+        node.left = newNode
+      } else {
+        this.insertNode(node.left, newNode)
+      }
+    } else {
+      // 去右边继续查找空白位置
+      if (node.right === null) {
+        node.right = newNode
+      } else {
+        this.insertNode(node.right, newNode)
+      }
+    }
+  }
+  // 遍历的操作
+  /** 先序遍历 */
+  preOrderTraverse() {
+    this.preOrderTraverseNode(this.root)
+  }
+  private preOrderTraverseNode(node: TreeNode<T> | null) {
+    if (node) {
+      console.log(node.value)
+      this.preOrderTraverseNode(node.left)
+      this.preOrderTraverseNode(node.right)
+    }
+  }
+  /** 中序遍历 */
+  inOrderTraverse() {
+    this.inOrderTraverseNode(this.root)
+  }
+  private inOrderTraverseNode(node: TreeNode<T> | null) {
+    if (node) {
+      this.inOrderTraverseNode(node.left)
+      console.log(node.value)
+      this.inOrderTraverseNode(node.right)
+    }
+  }
+  /** 后序遍历 */
+  postOrderTraverse() {
+    this.postOrderTraverseNode(this.root)
+  }
+  private postOrderTraverseNode(node: TreeNode<T> | null) {
+    if (node) {
+      this.postOrderTraverseNode(node.left)
+      this.postOrderTraverseNode(node.right)
+      console.log(node.value)
+    }
+  }
+  /** 层序遍历 */
+  levelOrderTraverse() {
+    // 1.如果没有根节点，那么不需要遍历
+    if (!this.root) return
+    // 2.创建队列结构
+    const queue: TreeNode<T>[] = []
+    queue.push(this.root)
+    // 3.遍历队列中所有的节点（依次出队）
+    while (queue.length) {
+      // 3.1访问节点的过程
+      const current = queue.shift()!
+      console.log(current.value)
+      // 3.2将左子节点放入队列
+      if (current.left) {
+        queue.push(current.left)
+      }
+      // 3.3将右子节点放入到队列
+      if (current.right) {
+        queue.push(current.right)
+      }
+    }
+  }
+  /** 获取最值操作：最大值 */
+  getMaxValue(): T | null {
+    let current = this.root
+    while (current && current.right) {
+      current = current.right
+    }
+    return current?.value ?? null
+  }
+  /** 获取最值操作：最小值 */
+  getMinValue(): T | null {
+    let current = this.root
+    while (current && current.left) {
+      current = current.left
+    }
+    return current?.value ?? null
+  }
+  /** 搜索特定的值 */
+  search(value: T): boolean {
+    return !!this.searchNode(value)
+  }
+  searchNodeValue(node: TreeNode<T> | null, value: T): boolean {
+    // 1.如果节点为null，那么就直接退出递归
+    if (node === null) return false
+    // 2.判断node节点的value和传入的value的大小
+    if (node.value > value) {
+      return this.searchNodeValue(node.left, value)
+    } else if (node.value < value) {
+      return this.searchNodeValue(node.right, value)
+    } else {
+      return true
+    }
+  }
+  /** 删除操作 */
+  private getSuccessor(delNode: TreeNode<T>) {
+    // 获取右子树
+    let current = delNode.right
+    let successor: TreeNode<T> | null = null
+    while (current) {
+      successor = current
+      current = current.left
+      if (current) {
+        current.parent = successor
+      }
+    }
+    // 拿到后继节点
+    if (successor !== delNode.right) {
+      successor!.parent!.left = successor!.right
+      successor!.right = delNode.right
+    }
+
+    // 将删除节点的 left，赋值给后继节点的 left
+    successor!.left = delNode.left
+    return successor
+  }
+  remove(value: T): boolean {
+    // 1.搜索当前是否有这个value
+    const current = this.searchNode(value)
+    if (!current) return false
+    // 2.获取到三个东西：当前节点/父节点是否属于父节点的左子节点还是右子节点
+    let replaceNode: TreeNode<T> | null = null
+    if (current.left === null && current.right === null) {
+      // 2.1.如果删除的是叶子节点
+      replaceNode = null
+    } else if (current.right === null) {
+      // 2.2.只有一个子节点，只有左子节点
+      replaceNode = current.left
+    } else if (current.left === null) {
+      // 2.3.只有一个子节点，只有右子节点
+      replaceNode = current.right
+    } else {
+      // 2.4.两个子节点
+      const successor = this.getSuccessor(current)
+      replaceNode = successor
+    }
+    if (current === this.root) {
+      this.root = replaceNode
+    } else if (current.isLeft) {
+      current.parent!.left = replaceNode
+    } else {
+      current.parent!.right = replaceNode
+    }
+    return true
+  }
+}
+```
+
+## 平衡树
+
+### 二叉搜索树缺陷
 
 二叉搜索树作为数据存储的结构有重要的优势
 
@@ -730,6 +946,8 @@ class TreeNode<T> extends Node<T> {
 
 ![image-20230904171135081](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230904171135081.png)
 
+### 平衡性
+
 为了能以较快的时间 O(log N)来操作一棵树，我们需要保证树总是平衡的
 
 - 至少大部分是平衡的，那么时间复杂度也是接近 O(logN) 的
@@ -740,3 +958,9 @@ AVL 树
 - AVL 树是最早的一种平衡树，它有些办法保证树的平衡（每个节点存储了一个额外的数据）
 - 因为 AVL 树是平衡的，所以时间复杂度也是 O(logN)
 - 但是，每次插入/删除操作相对于红黑树效率都不高，所以整体效率不如红黑树
+
+红黑树
+
+- 红黑树也通过一些特性来保持树的平衡
+- 因为是平衡树，所以时间复杂度也是 O(logN)
+- 另外插入/删除等操作，红黑树的性能要优于 AVL 树，所以现在平衡树的应用基本都是红黑树
