--- a/Algorithm/4.树结构-BST树.md
+++ b/Algorithm/4.树结构-BST树.md
@@ -407,7 +407,7 @@ class TreeNode<T> extends Node<T> {
 
 在二叉搜索树中搜索最值是一件非常简单的事情，其实用眼睛就可以看出来了
 
-![image-20230901141644257](E:\learn\lagouBigFront\md\Algorithm\img\image-20230901141644257.png)
+![image-20230901141644257](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20230901141644257.png)
 
 ```typescript
 class TreeNode<T> extends Node<T> {
